--- a/public/index.html
+++ b/public/index.html
@@ -16,7 +16,7 @@
   <link href="Assets/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 </head>
 
-<body>
+<body class="bg-login">
   <noscript>
     <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled.
       Please enable it to continue.</strong>
@@ -38,6 +38,7 @@
 
   <!-- Page level custom scripts -->
   <script src="Assets/js/demo/datatables-demo.js"></script>
+  <script src="vue-google-charts/dist/vue-google-charts.browser.js"></script>
 </body>
 
 </html>
