--- a/public/index.html
+++ b/public/index.html
@@ -8,12 +8,12 @@
   <link rel="icon" href="<%= BASE_URL %>favicon.ico">
   <title><%= htmlWebpackPlugin.options.title %></title>
 
-  <link href="Assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
+  <link href="assets/vendor/fontawesome-free/css/all.min.css" rel="stylesheet" type="text/css">
   <link rel="preconnect" href="https://fonts.gstatic.com">
   <link href="https://fonts.googleapis.com/css2?family=Poppins&display=swap" rel="stylesheet">
   <!-- Custom styles for this template-->
-  <link href="Assets/css/sb-admin-2.min.css" rel="stylesheet">
-  <link href="Assets/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
+  <link href="assets/css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="assets/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 </head>
 
 <body class="bg-login">
@@ -24,20 +24,20 @@
   <div id="app"></div>
   <!-- built files will be auto injected -->
   <!-- Bootstrap core JavaScript-->
-  <script src="Assets/vendor/jquery/jquery.min.js"></script>
-  <script src="Assets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
+  <script src="assets/vendor/jquery/jquery.min.js"></script>
+  <script src="asets/vendor/bootstrap/js/bootstrap.bundle.min.js"></script>
 
   <!-- Core plugin JavaScript-->
-  <script src="Assets/vendor/jquery-easing/jquery.easing.min.js"></script>
+  <script src="assets/vendor/jquery-easing/jquery.easing.min.js"></script>
 
   <!-- Custom scripts for all pages-->
-  <script src="Assets/js/sb-admin-2.min.js"></script>
+  <script src="assets/js/sb-admin-2.min.js"></script>
   <!-- Page level plugins -->
-  <script src="Assets/vendor/datatables/jquery.dataTables.min.js"></script>
-  <script src="Assets/vendor/datatables/dataTables.bootstrap4.min.js"></script>
+  <script src="assets/vendor/datatables/jquery.dataTables.min.js"></script>
+  <script src="assets/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
   <!-- Page level custom scripts -->
-  <script src="Assets/js/demo/datatables-demo.js"></script>
+  <script src="assets/js/demo/datatables-demo.js"></script>
   <script src="vue-google-charts/dist/vue-google-charts.browser.js"></script>
 </body>
 
