--- a/public/index.html
+++ b/public/index.html
@@ -13,6 +13,7 @@
   
   <!-- Custom styles for this template-->
   <link href="assets/css/sb-admin-2.min.css" rel="stylesheet">
+  <link href="assets/vendor/datatables/dataTables.bootstrap4.min.css" rel="stylesheet">
 </head>
 <body>
   <noscript>
@@ -26,7 +27,11 @@
   <script src="vue-google-charts/dist/vue-google-charts.browser.js"></script>
   <script src="../node_modules/@ckeditor/ckeditor5-build-classic/build/ckeditor.js"></script>
 <script src="../node_modules/@ckeditor/ckeditor5-vue/dist/ckeditor.js"></script>
+<script src="assets/vendor/datatables/jquery.dataTables.min.js"></script>
+<script src="assets/vendor/datatables/dataTables.bootstrap4.min.js"></script>
 
+<!-- Page level custom scripts -->
+<script src="assets/js/demo/datatables-demo.js"></script>
 </body>
 
 </html>
